force-app/main/default/objects/Meeting_Speaker_Review__c/Meeting_Speaker_Review__c.object-meta.xml
<CustomObject>
    <label>Meeting Speaker Review</label>
    <nameField>
        <displayFormat>MSR-{0000}</displayFormat>
        <label>Meeting Speaker Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Speaker Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>